--- a/COMPASSMOBILE Tasks/build.gradle
+++ b/COMPASSMOBILE Tasks/build.gradle
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
     compile 'com.crittercism:crittercism-android-agent:+'
+    compile project(':bluetoothservice-debug')
 }
