--- a/COMPASSMOBILE Tasks/build.gradle
+++ b/COMPASSMOBILE Tasks/build.gradle
@@ -4,13 +4,11 @@ apply plugin: 'realm-android'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "com.hydrop.compassmobile"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionName '1.1'
     }
     buildTypes {
         debug {
@@ -20,6 +18,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
