--- a/COMPASSMOBILE Tasks/build.gradle
+++ b/COMPASSMOBILE Tasks/build.gradle
@@ -9,6 +9,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 23
         versionName '1.1'
+        versionCode 2
     }
     buildTypes {
         debug {
